--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.2",
     "vite": "^4.4.6"
   }
 }
